# licpp

./: .clang-format  CMakeLists.txt  README.md
lib/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  parser.cpp  parser.hpp  structs.cpp  structs.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
